cleaned up api
